# ROS2_Car_simulation

src/car_test/: CMakeLists.txt  package.xml
src/car_test/src/: car_controls.cpp  car_dashboard.cpp  dashboard.txt  speed_detection.cpp  speed_regulation.cpp  speed_regulation_V0.cpp
src/car_test_interfaces/: CMakeLists.txt  package.xml
src/car_test_interfaces/srv/: NewMaxSpeed.srv
